--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mantine/form": "^8.0.1",
     "@mantine/hooks": "^8.0.1",
     "@tabler/icons-react": "^3.33.0",
+    "dotenv": "^16.5.0",
+    "openai": "^4.103.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
