--- a/server/.gitignore
+++ b/server/.gitignore
@@ -10,6 +10,10 @@ yarn-error.log*
 
 # Env files
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # OS files
 .DS_Store
