setting up railway nixpacks

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,8 +2,8 @@
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Server Configuration
-NODE_ENV=development
+NODE_ENV=production
 PORT=3001
 
-# CORS Configuration (for production)
-ALLOWED_ORIGINS=http://localhost:5173,https://your-frontend-domain.com
+# CORS Configuration (Railway deployment)
+ALLOWED_ORIGINS=https://your-frontend-domain.railway.app,https://your-custom-domain.com
