--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
