--- a/client/nixpacks.toml
+++ b/client/nixpacks.toml
@@ -1,6 +1,6 @@
 # Frontend-specific Nixpacks configuration
 [phases.setup]
-nixPkgs = ['nodejs-18_x']
+nixPkgs = ['nodejs-20_x']
 
 [phases.install]
 cmds = ['npm ci']
@@ -9,4 +9,4 @@ cmds = ['npm ci']
 cmds = ['npm run build']
 
 [start]
-cmd = 'npx serve -s dist -l $PORT'
+cmd = 'npm start'
