--- a/client/nixpacks.toml
+++ b/client/nixpacks.toml
@@ -1,6 +1,6 @@
 # Frontend-specific Nixpacks configuration
 [phases.setup]
-nixPkgs = ['nodejs-20_x']
+nixPkgs = ['nodejs_20']
 
 [phases.install]
 cmds = ['npm ci']
