--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   ],
   "devDependencies": {
     "concurrently": "^8.2.2"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+  },  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   }
 }
