remove docker in favor of nixpacks

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,7 @@ nixPkgs = ['nodejs_20']
 
 [phases.install]
 cmds = [
-    'npm ci',
+    'npm ci --include=optional',
     'cd server && npm ci',
     'cd client && npm ci'
 ]
