--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,22 +1,15 @@
 [phases.setup]
 nixPkgs = ['nodejs_20']
 
-[variables]
-NPM_CONFIG_INCLUDE = "optional"
-NIXPACKS_NO_CACHE = "1"
-
 [phases.install]
 cmds = [
-    'rm -rf node_modules package-lock.json client/node_modules client/package-lock.json server/node_modules server/package-lock.json',
-    'npm cache clean --force',
-    'npm install --include=optional --verbose',
-    'cd server && npm install --include=optional',
+    'npm install --include=optional',
+    'cd server && npm install',
     'cd client && npm install --include=optional'
 ]
 
 [phases.build]
 cmds = [
-    'npm rebuild --verbose',
     'cd server && npm run build',
     'cd client && npm run build'
 ]
