--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
     "dev:client": "cd client && npm run dev",
     "install:all": "npm install && cd server && npm install && cd ../client && npm install"
   },
-  "workspaces": [
-    "client",
-    "server"
-  ],
   "devDependencies": {
     "concurrently": "^8.2.2"
-  },  "engines": {
+  },
+  "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
   }
