--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,10 @@
     "openai": "^4.103.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1",
     "serve": "^14.2.1"
   },
   "devDependencies": {
@@ -35,6 +37,6 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^5.4.2"
+    "vite": "^6.3.5"
   }
 }
