--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^8.0.1",
     "@tabler/icons-react": "^3.33.0",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.14.0",
     "openai": "^4.103.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
