--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,15 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongodb": "^4.0.6",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.16.0",
     "openai": "^4.103.0"
   },
   "devDependencies": {
