--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mantine/form": "^8.0.1",
     "@mantine/hooks": "^8.0.1",
     "@tabler/icons-react": "^3.33.0",
+    "@tanstack/react-query": "^5.77.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.14.0",
     "openai": "^4.103.0",
